--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<div>
+		"My current favourite song is
+		<a href="https://youtu.be/tOM-nWPcR4U?si=ZY2MMEy37XTh7nDF">Illuminati|Aavesham</a>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
