--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-		"My current favourite song is
+		My current favourite song is
 		<a href="https://youtu.be/tOM-nWPcR4U?si=ZY2MMEy37XTh7nDF">Illuminati|Aavesham</a>
 	</div>
 	<!-- the entire body must be written by student -->
